# sdk-python

./: README.md  pyproject.toml
examples/: quickstart.py
kaizen/: __init__.py  _types.py  client.py  errors.py  http.py
kaizen/models/: __init__.py  akuma.py  enzan.py  sozo.py
kaizen/services/: __init__.py  akuma.py  enzan.py  sozo.py
tests/: test_client.py  test_enzan.py  test_http.py  test_models.py  test_services.py
