[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kaizen-sdk"
version = "1.0.0"
description = "Official Python SDK for Kaizen AI Systems - Akuma, Enzan, Sōzō"
readme = "README.md"
license = "MIT"
authors = [{ name = "Kaizen AI Systems", email = "dev@kaizen.run" }]
keywords = ["kaizen", "akuma", "enzan", "sozo", "nl-to-sql", "gpu-cost", "synthetic-data", "ai", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Database",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.9"
dependencies = ["httpx>=0.25.0"]

[project.optional-dependencies]
pandas = ["pandas>=2.0.0"]
dev = ["pytest>=7.0.0", "pytest-asyncio>=0.21.0", "ruff>=0.1.0", "mypy>=1.0.0"]

[project.urls]
Homepage = "https://kaizen.run"
Documentation = "https://docs.kaizen.run"
Repository = "https://github.com/kaizen-ai/sdk-python"
Issues = "https://github.com/kaizen-ai/sdk-python/issues"

[tool.hatch.build.targets.wheel]
packages = ["kaizen"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.9"
strict = true
